--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - pgdata:/var/lib/postgresql/data
-  mongo:
+      - /var/lib/postgresql/data
+  mongodb:
     image: mongo
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
@@ -15,7 +15,9 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongodata:/var/lib/mongodb/data
-volumes:
-  pgdata: 
-  mongodata:
+      - /var/lib/mongodb/data
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    ports:
+      - 5672:5672
+      - 15672:15672
