--- a/FitbitHeartRateDataService/appsettings.Development.json
+++ b/FitbitHeartRateDataService/appsettings.Development.json
@@ -9,5 +9,5 @@
   "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=HeartRates"
   
 },
-"IdentityServiceUrl": "http://localhost:5000"
+"IdentityServiceUrl": "https://localhost:5000"
 }
