Commit FitbitData and SearchService Docker images

--- a/SearchService/appsettings.Development.json
+++ b/SearchService/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "MongoDBConnection": "mongodb://root:mongopw@localhost"
   },
-  "HeartRateServiceUrl": "http://localhost:5171"
+  "HeartRateServiceUrl": "http://localhost:5171",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
