--- a/FitbitHeartRateDataService/appsettings.Development.json
+++ b/FitbitHeartRateDataService/appsettings.Development.json
@@ -7,7 +7,9 @@
   },
 "ConnectionStrings":{
   "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=HeartRates"
-  
 },
-"IdentityServiceUrl": "http://localhost:5000"
+"IdentityServiceUrl": "http://localhost:5000",
+"RabbitMq": {
+  "Host": "localhost"
+}
 }
