Fix typo in SearchService dockerfile

--- a/SearchService/Dockerfile
+++ b/SearchService/Dockerfile
@@ -26,4 +26,4 @@ RUN dotnet publish -c Release -o /App/out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
 COPY --from=build-env /App/out .
-ENTRYPOINT ["dotnet", "SearchServiceService.dll"]
+ENTRYPOINT ["dotnet", "SearchService.dll"]
