--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        {
+            "name": "Docker .NET Attach (Preview)",
+            "type": "docker",
+            "request": "attach",
+            "platform": "netCore",
+            // change to source in Docker
+            "sourceFileMap": {
+                "/App": "${workspaceFolder}"
+            }
+        },
         {
             "name": "HeartRateService",
             "type": "coreclr",
