--- a/GatewayService/appsettings.json
+++ b/GatewayService/appsettings.json
@@ -5,5 +5,46 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "heartRatesRead" : {
+        "ClusterId": "heartRates",
+        "Match": {
+          "Path": "/HeartRate/{**catch-all}",
+          "Methods": ["GET"]
+        },
+        "Transforms":[
+          {
+            "PathPattern":"api/HeartRate/{**catch-all}"
+          }
+        ]
+      },
+      "heartRatesWrite" : {
+        "ClusterId": "heartRates",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "/HeartRate/{**catch-all}",
+          "Methods": ["POST", "PUT", "DELETE"]
+        },
+        "Transforms":[
+          {
+            "PathPattern":"api/HeartRate/{**catch-all}"
+          }
+        ]
+      },
+      "search" : {
+        "ClusterId": "search",
+        "Match": {
+          "Path": "/search/{**catch-all}",
+          "Methods": ["GET"]
+        },
+        "Transforms":[
+          {
+            "PathPattern":"api/search/{**catch-all}"
+          }
+        ]
+      }
+    }
+  }
 }
